Добавьте файлы проекта.

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,14 +6,19 @@
         xmlns:local="clr-namespace:CameraTemp"
         mc:Ignorable="d"
         Closed="Window_Closed"
-        Title="MainWindow" Height="460" Width="800">
+        Title="MainWindow" Height="800" Width="800">
     <Grid Background="#FF564141">
         <Grid.RowDefinitions>
             <RowDefinition Height="400"/>
-            <RowDefinition Height="50"/>
+            <RowDefinition Height="25"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Image x:Name="Img" Grid.Row="0" HorizontalAlignment="Left" Height="339"/>
-        <ComboBox x:Name="Combo" Grid.Row="1" HorizontalAlignment="Center" VerticalAlignment="Top" Width="120" SelectionChanged="Combo_SelectionChanged"/>
+        <Frame x:Name="ImageFrame" Height="340" Grid.Row="0"/>
+        <StackPanel Grid.Row="1" Orientation="Horizontal">
+            <Button Width="100" Content="Photo" Click="Button_Click"/>
+            <Button Width="100" Content="Filters" Click="Button_Click_1"/>
+        </StackPanel>
+        <Frame x:Name="Menu" Grid.Row="2"/>
 
     </Grid>
 </Window>
